--- a/src/components/model/model.css
+++ b/src/components/model/model.css
@@ -1,19 +1,19 @@
-.spline-container {
-    width: 100% !important; /* Stretch the canvas to fill the container */
-    height: auto !important; /* Maintain aspect ratio */
+/* .spline-container {
+    width: 100% !important; 
+    height: auto !important; 
 }
 
 .spline-room-container {
     width: 100%;
-    height: 100vh; /* Adjust as needed */
-    max-width: 800px; /* Optional: Set a maximum width */
-    max-height: 500px; /* Optional: Set a maximum height */
+    height: 100vh; 
+    max-width: 800px; 
+    max-height: 500px; 
     overflow: hidden;
 }
 
 .spline-room-container  canvas {
-    transform: scale(0.65); /* Scale down to 80% */
-    transform-origin: center center; /* Keep it centered while scaling */
+    transform: scale(0.65); 
+    transform-origin: center center; 
 }
 
 @media screen and (max-width: 980px) {
@@ -39,5 +39,5 @@
         right: 50%;
         position: relative;
     }
-}
+} */
 
