--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -98,6 +98,109 @@
     transform: translateY(0);
 }
 
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    outline: 0;
+    background-color: rgba(128, 128, 128, 0.5);;
+}
+
+.modal-dialog {
+    position: relative;
+    width: 75%;
+    margin: 0.5rem auto !important;
+    pointer-events: none;
+}
+
+.modal-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    pointer-events: auto;
+    background-color: #ffffff;
+    background-clip: padding-box;
+    border-radius: var(--border-radius);
+    box-shadow: var(--shadow);
+    outline: 0;
+}
+
+.modal-header {
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 1rem;
+    border-bottom: 1px solid #dee2e6;
+}
+
+.modal-title {
+    margin-bottom: 0;
+    line-height: 1.5;
+}
+
+.modal-body {
+    position: relative;
+    flex: 1 1 auto;
+    padding: 1rem;
+    max-height: 80vh; /* Adjust as needed */
+    overflow-y: auto;
+}
+
+/* Style the entire scrollbar */
+.modal-body::-webkit-scrollbar {
+    width: 12px; /* Width of the vertical scrollbar */
+    height: 12px; /* Height of the horizontal scrollbar */
+}
+
+/* Style the scrollbar track (background of the scrollbar) */
+.modal-body::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Light grey track */
+    border-radius: 10px;
+}
+
+/* Style the scrollbar thumb (the draggable part of the scrollbar) */
+.modal-body::-webkit-scrollbar-thumb {
+    background-color: #888; /* Grey color for the thumb */
+    border-radius: 10px;
+    border: 3px solid #f1f1f1; /* Optional border around the thumb */
+}
+
+/* Hover effect on the scrollbar thumb */
+.modal-body::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Darker grey when hovered */
+}
+
+/* Optional: Style the scrollbar corner if needed */
+.modal-body::-webkit-scrollbar-corner {
+    background-color: #f1f1f1;
+}
+
+.modal-footer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0.75rem;
+    border-top: 1px solid #dee2e6;
+}
+
+.btn-close {
+    padding: 0.25em 0.25em;
+    color: #000;
+    background: transparent;
+    border: 0;
+    appearance: none;
+    }
+  
+
 @media screen and (max-width: 1024px) {
     .work_filters {
         justify-content: center;
